Fixed a contrast issue

--- a/src/styles/modules/generator.module.scss
+++ b/src/styles/modules/generator.module.scss
@@ -1,10 +1,10 @@
 @import '../vars/all';
 
 .link {
-  color: #7a80f0;
+  color: #80df98;
   text-decoration: none;
   &:hover {
-    color: #8a90fc;
+    color: #a6ffbc;
   }
 }
 
